# ros2_abu

./: .bash_aliases  .gitignore  GEMINI.md  my_map.pgm  my_map.yaml  sim  simfull  simnav
gazabo/models/abu_stadium/: model.config  model.sdf  test_spear.sdf
gazabo/models/abu_stadium/meshes/: forest_1.stl  spearhead_rack_1_simple.stl  staff_rack_1.stl  staff_rack_2.stl
gazabo/models/fist/: model.config  model.sdf
gazabo/models/fist/meshes/: Fist.stl
gazabo/models/spear/: model.config  model.sdf
gazabo/worlds/: abu_stadium.world
my_camera_project/: package.xml  setup.cfg  setup.py
my_camera_project/my_camera_project/: camera.py  camera_driver.py  yolo_detector.py
roboarm_ws/install/: local_setup.sh  setup.sh
roboarm_ws/log/: latest_build
roboarm_ws/src/my_vision_system/: package.xml  setup.cfg  setup.py
roboarm_ws/src/my_vision_system/my_vision_system/: picking_node.py  yolo_docking_node.py  yolo_node.py  yolo_real_cam_debug.py  yolo_select_node.py
robocon_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robocon_ws/log/: latest_build
robocon_ws/src/camera_raw_publisher/: setup.cfg  setup.py
robocon_ws/src/camera_raw_publisher/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robocon_ws/src/camera_raw_publisher/log/: latest_build
robocon_ws/src/image_topic_viewer/: package.xml  setup.cfg  setup.py
robocon_ws/src/image_topic_viewer/resource/: image_topic_viewer
robocon_ws/src/install/: local_setup.sh  setup.bash  setup.sh
robocon_ws/src/log/: latest_build
robocon_ws/src/robocon_tutorial/: setup.cfg  setup.py
ros2_ws/: lidar_compare.rviz  lidar_view.rviz  scan_filter.py  start_ydlidar.sh  ydlidar.service
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/mecanum4_description/: CMakeLists.txt  package.xml
ros2_ws/src/mecanum4_description/config/: nav2_params.yaml  nav2_params_real.yaml  nav2_view.rviz  slam_params.yaml  slam_params_real.yaml
ros2_ws/src/mecanum4_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/mecanum4_description/install/mecanum4_description/lib/mecanum4_description/: fused_docking_node.py
ros2_ws/src/mecanum4_description/install/mecanum4_description/share/mecanum4_description/: package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/mecanum4_description/install/mecanum4_description/share/mecanum4_description/config/: mecanum_controllers.yaml  nav2_params.yaml  nav2_view.rviz  slam_params.yaml
ros2_ws/src/mecanum4_description/install/mecanum4_description/share/mecanum4_description/launch/: localization_bringup.launch.py  nav2_amcl_bringup.launch.py  nav2_slam_bringup.launch.py
ros2_ws/src/mecanum4_description/install/mecanum4_description/share/mecanum4_description/urdf/: mecanum4_lidar.urdf
ros2_ws/src/mecanum4_description/launch/: abu_stadium_spawn.launch.py  display.launch.py  integrated_system.launch.py  localization_bringup.launch.py  nav2_amcl_bringup.launch.py  nav2_slam_bringup.launch.py  real_mapping.launch.py  sim_bringup.launch.py  teleop_motor.launch.py
ros2_ws/src/mecanum4_description/log/: latest_build
ros2_ws/src/mecanum4_description/meshes/abu_stadium/: base_1.stl  forest2_1.stl  spearhead_rack_1.stl  tic_tac_toe_rack_1.stl
ros2_ws/src/mecanum4_description/scripts/: amcl_kidnap_spin.py  bt_sequence_node.py  cam_lidar_docking_node.py  camera_docking_node.py  cmd_vel_to_arduino.py  cmd_vel_to_wheels.py  docking_node.py  fused_docking_node.py  gpu_eval.sh  scan_filter.py  teleop_gui.py
ros2_ws/src/mecanum4_description/urdf/: abu_stadium.urdf  mecanum4_lidar.urdf  target_item.urdf
ros2_ws/src/ydlidar_ros2_driver/: CMakeLists.txt
ros2_ws/src/ydlidar_ros2_driver/config/: ydlidar.rviz
ros2_ws/src/ydlidar_ros2_driver/install/: local_setup.sh  setup.sh
ros2_ws/src/ydlidar_ros2_driver/install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_client
ros2_ws/src/ydlidar_ros2_driver/install/ydlidar_ros2_driver/share/ament_index/resource_index/parent_prefix_path/: ydlidar_ros2_driver
ros2_ws/src/ydlidar_ros2_driver/install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: package.sh
ros2_ws/src/ydlidar_ros2_driver/install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/launch/: ydlidar_driver.launch.py  ydlidar_rviz.launch.py  ydlidar_scan_echo.launch.py
ros2_ws/src/ydlidar_ros2_driver/launch/: ydlidar_launch_view.py
ros2_ws/src/ydlidar_ros2_driver/log/: latest_build
ros2_ws/src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
(+114 files in other folders)
